; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_uhid_snes.c_uhid_get_report.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/usb/input/extr_uhid_snes.c_uhid_get_report.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uhid_snes_softc = type { i32, i32 }

@M_USBDEV = common dso_local global i32 0, align 4
@M_WAITOK = common dso_local global i32 0, align 4
@ENOMEM = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.uhid_snes_softc*, i32, i32, i8*, i8*, i32)* @uhid_get_report to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @uhid_get_report(%struct.uhid_snes_softc* %0, i32 %1, i32 %2, i8* %3, i8* %4, i32 %5) #0 {
  %7 = alloca %struct.uhid_snes_softc*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i8*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  store %struct.uhid_snes_softc* %0, %struct.uhid_snes_softc** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store i8* %3, i8** %10, align 8
  store i8* %4, i8** %11, align 8
  store i32 %5, i32* %12, align 4
  store i32 0, i32* %14, align 4
  %15 = load i8*, i8** %10, align 8
  %16 = icmp eq i8* %15, null
  br i1 %16, label %17, label %27

17:                                               ; preds = %6
  %18 = load i32, i32* %12, align 4
  %19 = load i32, i32* @M_USBDEV, align 4
  %20 = load i32, i32* @M_WAITOK, align 4
  %21 = call i8* @malloc(i32 %18, i32 %19, i32 %20)
  store i8* %21, i8** %10, align 8
  %22 = load i8*, i8** %10, align 8
  %23 = icmp eq i8* %22, null
  br i1 %23, label %24, label %26

24:                                               ; preds = %17
  %25 = load i32, i32* @ENOMEM, align 4
  store i32 %25, i32* %13, align 4
  br label %56

26:                                               ; preds = %17
  store i32 1, i32* %14, align 4
  br label %27

27:                                               ; preds = %26, %6
  %28 = load %struct.uhid_snes_softc*, %struct.uhid_snes_softc** %7, align 8
  %29 = getelementptr inbounds %struct.uhid_snes_softc, %struct.uhid_snes_softc* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = load i8*, i8** %10, align 8
  %32 = load i32, i32* %12, align 4
  %33 = load %struct.uhid_snes_softc*, %struct.uhid_snes_softc** %7, align 8
  %34 = getelementptr inbounds %struct.uhid_snes_softc, %struct.uhid_snes_softc* %33, i32 0, i32 0
  %35 = load i32, i32* %34, align 4
  %36 = load i32, i32* %8, align 4
  %37 = load i32, i32* %9, align 4
  %38 = call i32 @usbd_req_get_report(i32 %30, i32* null, i8* %31, i32 %32, i32 %35, i32 %36, i32 %37)
  store i32 %38, i32* %13, align 4
  %39 = load i32, i32* %13, align 4
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %27
  %42 = load i32, i32* @ENXIO, align 4
  store i32 %42, i32* %13, align 4
  br label %56

43:                                               ; preds = %27
  %44 = load i8*, i8** %11, align 8
  %45 = icmp ne i8* %44, null
  br i1 %45, label %46, label %55

46:                                               ; preds = %43
  %47 = load i8*, i8** %10, align 8
  %48 = load i8*, i8** %11, align 8
  %49 = load i32, i32* %12, align 4
  %50 = call i32 @copyout(i8* %47, i8* %48, i32 %49)
  store i32 %50, i32* %13, align 4
  %51 = load i32, i32* %13, align 4
  %52 = icmp ne i32 %51, 0
  br i1 %52, label %53, label %54

53:                                               ; preds = %46
  br label %56

54:                                               ; preds = %46
  br label %55

55:                                               ; preds = %54, %43
  br label %56

56:                                               ; preds = %55, %53, %41, %24
  %57 = load i32, i32* %14, align 4
  %58 = icmp ne i32 %57, 0
  br i1 %58, label %59, label %63

59:                                               ; preds = %56
  %60 = load i8*, i8** %10, align 8
  %61 = load i32, i32* @M_USBDEV, align 4
  %62 = call i32 @free(i8* %60, i32 %61)
  br label %63

63:                                               ; preds = %59, %56
  %64 = load i32, i32* %13, align 4
  ret i32 %64
}

declare dso_local i8* @malloc(i32, i32, i32) #1

declare dso_local i32 @usbd_req_get_report(i32, i32*, i8*, i32, i32, i32, i32) #1

declare dso_local i32 @copyout(i8*, i8*, i32) #1

declare dso_local i32 @free(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
